stories: ensure plotly fig modebar does not overlap figure legend

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -138,3 +138,7 @@ a:hover {
 * {
   box-sizing: border-box;
 }
+
+.js-plotly-plot .plotly .modebar .modebar-group {
+    display: flex;
+}
